--- a/app/views/signups/step1.html.haml
+++ b/app/views/signups/step1.html.haml
@@ -30,36 +30,43 @@
     = form_for @user, url: step1_signups_path, method: :post do |f|
       - required = '必須'
       .user_information
+
         .field
           .field-label
             = f.label :"ニックネーム", class: 'label_nickname'
             %span.min #{required}
+
           - if @user.errors.messages[:nickname].any?
             .field-input
               = f.text_field :nickname, autofocus: true, class: 'user_nickname_error', id: 'nickname', placeholder: '例）フリマ123'
               = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:nickname)
+
           - else
             .field-input
-              - if @user.nickname
+              - if session[:nickname].present?
                 = f.text_field :nickname, autofocus: true, value: @user.nickname, class: 'user_nickname', id: 'nickname'
               - else
                 = f.text_field :nickname, autofocus: true, class: 'user_nickname', id: 'nickname', placeholder: '例）フリマ123'
+
+
         .field
           .field-label
             = f.label :"メールアドレス", class: 'label_mail'
             %span.min #{required}
+
           - if @user.errors.messages[:email].any?
             .field-input
               = f.email_field :email, class: 'user_email_error', id: 'email', placeholder: 'PC・携帯どちらでも可'
               = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:email)
+
           - else
             .field-input
-              - if @user.email
+              - if session[:email].present?
                 = f.text_field :email, autofocus: true, value: @user.email, class: 'user_email', id: 'email'
               - else
                 = f.email_field :email, class: 'user_email', id: 'email', placeholder: 'PC・携帯どちらでも可'
-        -# sns認証を利用して登録するユーザはpasswordを入力しない
-        - unless @user.password
+
+        - if session[:password_confirmation].nil? && session[:password_confirmation].blank?
           .field
             = f.label :"パスワード", class: 'label_password'
             %span.min #{required}
@@ -68,55 +75,67 @@
               = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:password)
             - else
               = f.password_field :password_confirmation, class: 'user_password', id: 'password', placeholder: '７文字以上'
+
             .field_checkbox
               = f.check_box :password, checked: false, class: "checkbox"
               = f.label :"パスワードを表示する", class: 'check_password'
+
             .user_confirm
               %h4.confirm_title
                 本人確認
               %p.confirm_message
                 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+
         .field
           .field-label
             = f.label :"お名前(全角)", class: 'label_name'
             %span.min #{required}
+
           .field-input.field-input_errors
             - if @user.errors.messages[:lastname].any?
               = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname_error'
             - else
               = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname'
+
             - if @user.errors.messages[:firstname].any?
               = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname_error'
             - else
               = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname'
+
           - if @user.errors.messages[:lastname].any?
             = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:lastname)
           - if @user.errors.messages[:firstname].any?
             = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:firstname)
+
         .field
           .field-label
             = f.label :"お名前カナ(全角)", class: 'label_namekana'
             %span.min #{required}
+
           .field-input.field-input_errors
             - if @user.errors.messages[:lastname].any?
               = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana_error'
             - else
               = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana'
+
             - if @user.errors.messages[:firstname].any?
               = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana_error'
             - else
               = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana'
+
           - if @user.errors.messages[:lastname_kana].any?
             = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:lastname_kana)
           - if @user.errors.messages[:firstname_kana].any?
             = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:firstname_kana)
+
         .field
           .field-label
             = f.label :"生年月日", class: 'label_birthday'
             %span.min #{required}
-          - if @user.errors.messages[:birthday_year].any?
+
+          - if @user.errors.messages[:birthday_day].any?
             .field-input
-              = f.select :birthday_year, [*1900..2019].reverse!, prompt: "--", id: 'user_birthday_year'
+              = f.select :birthday_year, [*1900..2019].reverse, prompt: "--", id: 'user_birthday_year'
               .i{class: "fas fa-angle-down"}
               %span 年
               = f.select :birthday_month, [*1..12], prompt: "--", id: 'user_birthday_month'
@@ -127,6 +146,7 @@
               %span 日
               %p.signups_errors__error
                 = @user.errors.messages[:birthday_day].join
+
           - else
             .field-input
               = f.select :birthday_year, [*1900..2019].reverse, prompt: "--", id: 'user_birthday_year'
@@ -138,15 +158,18 @@
               = f.select :birthday_day, [*1..31], prompt: "--", id: 'user_birthday_day'
               .i{class: "fas fa-angle-down"}
               %span 日
+
         .registration_message
           %p.regime
             ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
+
         - if @user.errors.details[:base].any?
           .field
             = recaptcha_tags id: 'recaptcha_error'
             .signups_errors
             %p.signups_errors__error
               = @user.errors.details[:base].first[:error]
+
         - else
           .field
             = recaptcha_tags id: 'recaptcha'
@@ -157,5 +180,34 @@
           .firld-input
             = f.submit :"次へ進む", class: "next_submit"
         .destory_wall
+
 .single-footer
   = render 'signups/footer'
+
+:javascript
+  // 入力中にページを離れたときにsessionを削除するために
+  history.pushState(null, null, null);
+  // 戻るボタン押下でイベント発動
+  window.addEventListener("popstate", function() {
+  // 確認メッセージ表示
+    window.onbeforeunload = function(e) {
+      history.pushState(null, null, null);
+      return '登録が最初からになりますがいいですか？';
+    };
+    history.pushState(null, null, null);
+    // このページを離れるを押した場合signups#indexにリダイレクトする
+    if ( location.host.match(/host/) ) {
+      location.href = "http://localhost:3000/signups";
+    } else {
+      location.href = "http://18.177.15.224/signups";
+    }
+  });
+
+  // パスワードの表示・非表示切替
+  $('.checkbox').change(function(){
+      if ( $(this).prop('checked') ) {
+          $('#password').attr('type','text');
+      } else {
+          $('#password').attr('type','password');
+      }
+  });
