--- a/app/views/signups/step2.html.haml
+++ b/app/views/signups/step2.html.haml
@@ -12,15 +12,15 @@
         電話番号認証
         %br
         %span.point2-2
-      %li.step-bar__block  
+      %li.step-bar__block
         お届け先住所入力
         %br
         %span.point2-3
-      %li.step-bar__block 
+      %li.step-bar__block
         支払い方法
         %br
         %span.point2-4
-      %li.step-bar__block 
+      %li.step-bar__block
         完了
         %br
         %span.point2-5
@@ -47,3 +47,22 @@
         .destroy-wall
 .single-footer
   = render 'signups/footer'
+
+:javascript
+  // 入力中にページを離れたときにsessionを削除するために
+  history.pushState(null, null, null);
+  // 戻るボタン押下でイベント発動
+  window.addEventListener("popstate", function() {
+  // 確認メッセージ表示
+    window.onbeforeunload = function(e) {
+      history.pushState(null, null, null);
+      return '登録が最初からになりますがいいですか？';
+    };
+    history.pushState(null, null, null);
+    // このページを離れるを押した場合signups#indexにリダイレクトする
+    if ( location.host.match(/host/) ) {
+      location.href = "http://localhost:3000/signups";
+    } else {
+      location.href = "http://18.177.15.224/signups";
+    }
+  });
