--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -26,10 +26,27 @@
     height: 40px;
     width: 75%;
 
-    &__Menu {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 10px;
+  .HeaderTop{
+      height: 40px;
+      width: 75%;
+      position: relative;
+
+
+      &__Menu{
+        display: flex;
+        margin-top: 10px;
+
+        &__header-logo{
+
+          height: 45px;
+          width: 180px;
+          padding: 5px;
+          background-image: url("fmarket_logo_red");
+          background-repeat: no-repeat;
+          position: absolute;
+        
+
+        }
 
       &__header-logo {
         height: 45px;
@@ -62,7 +79,9 @@
   }
 }
 
-input.search {
+
+
+input.search{
   font-family: inherit;
   border: none;
   background-color: #f5f5f5;
@@ -77,9 +96,6 @@ button.search-logo {
   background-color: #f5f5f5;
 }
 
-img.footer-logo {
-  float: left;
-}
 
 .HeaderBottom {
   height: 50px;
@@ -153,8 +169,9 @@ img.footer-logo {
         margin-left: 10px;
       }
     }
-  }
+
 }
+
 
 .Slide-menu {
   height: 250px;
@@ -169,8 +186,8 @@ img.footer-logo {
   }
 }
 
-.main-toppage {
-  height: 1200px;
+
+.main-toppage{
   width: 75%;
 
 .MainMenu{
@@ -460,8 +477,10 @@ li.FooterMenu__list__small {
 
 .aside-toppage {
   height: 180px;
+  width: 100%;
   background-size: inherit;
-
+  background-color: darkorange;
+  
   display: flex;
   justify-content: center;
 
@@ -497,8 +516,7 @@ img.aside-image1 {
   padding-left: 20px;
 }
 
-.footer-toppage {
-  height: 289px;
+.footer-toppage{
   width: 100%;
   background-color: #ff006f;
   color: #ffffff;
@@ -510,10 +528,10 @@ img.aside-image1 {
   justify-content: center;
 }
 
-.FooterMenu {
-  height: 296px;
-  width: 75%;
-  float: left;
+.FooterMenu{
+    height: 250px;
+    width: 75%;
+    float: left;
 
   &__list {
     display: inline-block;
@@ -522,8 +540,22 @@ img.aside-image1 {
     margin: 36px;
     padding-left: 0;
 
-    &__title {
-      font-size: 16px;
+    &__list{
+      display: inline-block;
+      width: 200px;
+      vertical-align: top;
+      margin: 32px;
+      padding-left: 0;
+    
+      &__title{
+        font-size: 16px;
+      }
+      
+      &__small{
+        font-size: 12px;
+        margin-left: 16px;
+        font: inherit;
+      }
     }
 
     &__small {
@@ -538,36 +570,28 @@ img.aside-image1 {
   height: 33px;
   position: absolute;
   bottom: 20px;
+
+  &__footer-logo{
+    height: 33px;
+    width: 124px;
+    padding: 25px 5px 5px 5px;
+    background-image: url("fmarket_logo_white");
+    background-repeat: no-repeat;
+  }
+  
+  &__footer-text{
+    text-align: center;
+    width: 765px;
+    height: 12px;
+    font-size: 12px;
+    padding-left: 280px;
+  }
+  
+
 }
 
-.footer-logo {
-  height: 33px;
-  width: 124px;
-  padding: 25px 5px 5px 5px;
-  display: block;
-  background-image: url("fmarket_logo_white");
-  background-repeat: no-repeat;
-}
 
-span.footer-text {
-  text-align: center;
-  width: 765px;
-  height: 12px;
-  font-size: 12px;
-  padding-left: 280px;
-}
 
-.PostItems {
-  width: 200px;
-  height: 200px;
-  padding: 20px;
-  position: fixed;
-  bottom: 5px;
-  right: 0;
-  display: inline-block;
-  display: flex;
-  justify-content: center;
-  z-index: 100;
 
   &__Button {
     padding-top: 15px;
