--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -22,64 +22,45 @@
   display: flex;
   justify-content: center;
 
-  .HeaderTop {
-    height: 40px;
-    width: 75%;
 
   .HeaderTop{
       height: 40px;
       width: 75%;
       position: relative;
 
-
       &__Menu{
         display: flex;
         margin-top: 10px;
 
         &__header-logo{
-
           height: 45px;
           width: 180px;
           padding: 5px;
           background-image: url("fmarket_logo_red");
           background-repeat: no-repeat;
           position: absolute;
-        
-
         }
 
-      &__header-logo {
-        height: 45px;
-        width: 180px;
-        padding: 5px;
-        display: block;
-        background-image: url("fmarket_logo_red");
-        background-repeat: no-repeat;
-      }
+        &__header-search {
+          width: 750px;
+          margin-left: 270px;
+          background-color: rgb(245, 245, 245);
 
-      &__header-search {
-        height: 40px;
-        width: 750px;
-        margin-left: 270px;
-
-        background-color: rgb(245, 245, 245);
-        font-size: 16px;
-        height: 40px;
-        line-height: 2.4em;
-        position: absolute;
-        border-width: 1px;
-        border-style: solid;
-        border-color: rgb(204, 204, 204);
-        border-image: initial;
-        border-radius: 4px;
-        outline: none;
-        transition: all 0.3s ease-out 0s;
-      }
+          font-size: 16px;
+          height: 40px;
+          line-height: 2.4em;
+          position: absolute;
+          border-width: 1px;
+          border-style: solid;
+          border-color: rgb(204, 204, 204);
+          border-image: initial;
+          border-radius: 4px;
+          outline: none;
+          transition: all 0.3s ease-out 0s;
+        }
     }
   }
 }
-
-
 
 input.search{
   font-family: inherit;
@@ -97,80 +78,83 @@ button.search-logo {
 }
 
 
-.HeaderBottom {
-  height: 50px;
-  width: 75%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-  bottom: 0;
+  .HeaderBottom {
+    height: 50px;
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    bottom: 0;
+    position: absolute;
 
-  position: absolute;
-
-  &__Left {
-    &__genre_search {
-      display: block;
-      font-size: 14px;
-      font-weight: 600;
-      line-height: 36px;
-      white-space: nowrap;
-      float: left;
-      padding-right: 20px;
-      padding-top: 10px;
-    }
-  }
-
-  &__Right {
-    margin-right: 220px;
-    &__Menu-with-sign_in {
-      display: inline-block;
-      align-items: center;
-      font-size: 14px;
-      height: 32px;
-      padding-right: 30px;
-      padding-top: 20px;
-      transform: scale(1);
-      transition: all 0.3s ease-out 0s;
-
-      &__mypage {
-        color: #333;
-        text-decoration: none;
-      }
-    }
-
-    &__Menu-without-sign_in {
-      display: flex;
-      margin-right: 240px;
-      margin-top: 10px;
-      &__sign_up {
-        background-color: rgb(234, 53, 45);
-        color: rgb(255, 255, 255);
+    &__Left {
+      &__genre_search {
         display: block;
         font-size: 14px;
-        border-width: 1px;
-        border-style: solid;
-        border-color: rgb(234, 53, 45);
-        border-image: initial;
-        border-radius: 4px;
-        padding: 8px 10px;
-      }
-
-      &__sign_in {
-        background-color: rgb(255, 255, 255);
-        color: rgb(0, 149, 238);
-        display: block;
-        font-size: 14px;
-        border-width: 1px;
-        border-style: solid;
-        border-color: rgb(0, 149, 238);
-        border-image: initial;
-        border-radius: 4px;
-        padding: 8px 10px;
-        margin-left: 10px;
+        font-weight: 600;
+        line-height: 36px;
+        white-space: nowrap;
+        float: left;
+        padding-right: 20px;
+        padding-top: 10px;
       }
     }
 
+    &__Right {
+      margin-right: 220px;
+      &__Menu-with-sign_in {
+        display: inline-block;
+        align-items: center;
+        font-size: 14px;
+        height: 32px;
+        padding-right: 30px;
+        padding-top: 20px;
+        transform: scale(1);
+        transition: all 0.3s ease-out 0s;
+
+        &__mypage {
+          color: #333;
+          text-decoration: none;
+        }
+      }
+
+      &__Menu-without-sign_in {
+        display: flex;
+        margin-right: 240px;
+        margin-top: 10px;
+        &__sign_up {
+          background-color: rgb(234, 53, 45);
+          color: rgb(255, 255, 255);
+          display: block;
+          font-size: 14px;
+          border-width: 1px;
+          border-style: solid;
+          border-color: rgb(234, 53, 45);
+          border-image: initial;
+          border-radius: 4px;
+          padding: 8px 10px;
+        }
+
+        &__sign_in {
+          background-color: rgb(255, 255, 255);
+          color: rgb(0, 149, 238);
+          display: block;
+          font-size: 14px;
+          border-width: 1px;
+          border-style: solid;
+          border-color: rgb(0, 149, 238);
+          border-image: initial;
+          border-radius: 4px;
+          padding: 8px 10px;
+          margin-left: 10px;
+        }
+      }
+    }
 }
+
+
+
+
 
 
 .Slide-menu {
@@ -190,6 +174,7 @@ button.search-logo {
 .main-toppage{
   width: 75%;
 
+
 .MainMenu{
 
   &__FavoriteItems{
@@ -199,42 +184,36 @@ button.search-logo {
     margin-left: 153px;
     margin-top: 30px;
 
-    &__Header{
-      height: 50px;
-      font-weight: 600;
-      line-height: 1.4em;
-      margin: 0;
-      display: flex;
-      justify-content: space-between;
-      padding: 10px;
-
-    }
-
-
       &__Header {
         height: 50px;
-        display: flex;
         font-weight: 600;
         line-height: 1.4em;
         margin: 0;
-        padding: 0;
         display: flex;
         justify-content: space-between;
         padding: 10px;
       }
 
-          &__List{
-            padding: 30px;
-
-              &__image {
+      &__Body{
+        &__Items{
+  
+          &__All{
+  
+            &__List{
+              padding: 30px;
+  
+              &__image{
               }
             }
           }
         }
       }
-    }
+  }
+    
+      
+    
 
-    &__CategoryLists {
+  &__CategoryLists {
       height: 171px;
       width: 100%;
       background-color: rgb(255, 255, 255);
@@ -255,8 +234,8 @@ button.search-logo {
             padding: 10px;
             margin: 10px;
 
-          margin-top: 20px;
-          margin-left: 50px;
+            margin-top: 20px;
+            margin-left: 50px;
 
             text-align: center;
             background-color: #dddddd;
@@ -265,7 +244,7 @@ button.search-logo {
         }
       }
     }
-  }
+  
 
   &__CategoryItems{
     height: 400px;
@@ -290,8 +269,6 @@ button.search-logo {
     
       &__Items{
         
-
-      
         &__All{
           height:300px;
           width: 100%;
@@ -306,6 +283,7 @@ button.search-logo {
         }
       }
     }
+  
 
 
 h3.category-item-title{
@@ -314,10 +292,9 @@ h3.category-item-title{
 }
 
 
-
-      figure.body-item {
-      }
-    }
+  }
+      
+    
     &__BrandLists {
       height: 171px;
       width: 100%;
@@ -365,17 +342,10 @@ h3.category-item-title{
       justify-content: space-between;
       padding: 15px;
 
-
     }
 
-    &__BrandItems {
-      height: 400px;
-      background-color: #000000;
-      width: 100%;
-      margin-left: 153px;
-      margin-bottom: 50px;
+    &__Body{
 
-    
       &__Items{
 
       
@@ -387,18 +357,6 @@ h3.category-item-title{
             padding: 10px, 16px, 0, 16px;
             display: flex;
 
-      &__Body {
-        &__Items {
-          &__All {
-            &__List {
-              height: 300px;
-              width: 250px;
-              padding: 10px;
-              float: left;
-
-              &__image {
-                width: 200px;
-              }
             }
           }
         }
@@ -533,12 +491,6 @@ img.aside-image1 {
     width: 75%;
     float: left;
 
-  &__list {
-    display: inline-block;
-    width: 200px;
-    vertical-align: top;
-    margin: 36px;
-    padding-left: 0;
 
     &__list{
       display: inline-block;
@@ -557,13 +509,8 @@ img.aside-image1 {
         font: inherit;
       }
     }
-
-    &__small {
-      font-size: 12px;
-      font: inherit;
-    }
-  }
 }
+
 
 .FooterBottom {
   width: 75%;
@@ -591,20 +538,31 @@ img.aside-image1 {
 }
 
 
+.PostItems{
+  width: 200px;
+  height: 200px;
+  padding: 20px;
+  position: fixed;
+  bottom: 5px;
+  right: 0;
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  z-index: 100;f
 
 
-  &__Button {
-    padding-top: 15px;
-    text-align: center;
-    height: 140px;
-    width: 140px;
-    background-color: rgb(234, 53, 45);
-    border-radius: 50%;
-    color: white;
-    font-size: 22px;
-  }
+&__Button{
+  padding-top: 15px;
+  text-align: center;
+  height: 140px;
+  width: 140px;
+  background-color: rgb(234, 53, 45);
+  border-radius: 50%;
+  color: white;
+  font-size: 22px;
+}
 
-  &__Icon {
+&__Icon{
     display: block;
     height: 50px;
     width: 50px;
@@ -613,5 +571,8 @@ img.aside-image1 {
     justify-content: center;
     margin-top: 7px;
     margin-left: 45px;
-  }
+ 
 }
+
+}
+
