--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -164,14 +164,14 @@ button.search-logo {
 
 .main-toppage {
   width: 75%;
+  margin: auto;
 
   .MainMenu {
     &__FavoriteItems {
-      height: 28rem;
+      height: 30rem;
       background-color: #ffbf1f;
       width: 100%;
-      margin-left: 15.3rem;
-      margin-top: 3rem;
+      margin: auto;
 
       &__Header {
         height: 5rem;
@@ -180,16 +180,48 @@ button.search-logo {
         margin: 0;
         display: flex;
         justify-content: space-between;
-        padding: 1rem;
+        padding: 2rem 0 1rem 3rem;
       }
 
       &__Body {
+        height: calc(100% - 5rem);
         &__Items {
           &__All {
             &__List {
-              padding: 3rem;
+              margin-left: 3rem;
+              &__images {
+                display: flex;
+                &__image {
+                  margin-right: 3rem;
+                  border: 0.1rem solid #dddddd;
+                  position: relative;
 
-              &__image {
+                  .favorite-item-image {
+                    display: block;
+                    height: 20rem;
+                    width: 18rem;
+                  }
+                  .home__sold-out-image {
+                    border: 3rem solid;
+                    width: 0;
+                    height: 0;
+                    border-style: solid;
+                    border-color: $red transparent transparent $red;
+                    z-index: 1;
+                    position: absolute;
+                  }
+                  .home__sold-out-text {
+                    font-size: 1.5rem;
+
+                    color: #fff;
+                    font-weight: bolder;
+                    letter-spacing: 0.1em;
+                    position: absolute;
+                    top: -1.7rem;
+                    left: -3rem;
+                    transform: rotateZ(315deg);
+                  }
+                }
               }
             }
           }
@@ -201,13 +233,13 @@ button.search-logo {
       height: 17.1rem;
       width: 100%;
       background-color: rgb(255, 255, 255);
-      margin-left: 15.3rem;
 
       &__List {
         &__All {
           width: 75%;
-          margin-left: 13.5rem;
-
+          margin: auto;
+          display: flex;
+          justify-content: center;
           &__list {
             display: inline-block;
             font-size: 1.4rem;
@@ -227,7 +259,7 @@ button.search-logo {
       height: 40rem;
       background-color: #000000;
       width: 100%;
-      margin-left: 15.3rem;
+
       margin-bottom: 10rem;
 
       &__Header {
@@ -250,6 +282,34 @@ button.search-logo {
             &__List {
               padding: 1rem, 1.6rem, 0, 1.6rem;
               display: flex;
+              &__item {
+                margin-left: 1rem;
+                .body-item-image {
+                  display: flex;
+                  height: 23rem;
+                  width: 20rem;
+                  border-style: groove;
+                  background-size: cover;
+                }
+                .home__sold-out-image {
+                  border: 3rem solid;
+                  width: 0;
+                  height: 0;
+                  border-style: solid;
+                  border-color: $red transparent transparent $red;
+                  z-index: 1;
+                  position: absolute;
+                }
+                .home__sold-out-text {
+                  font-size: 1.5rem;
+                  color: #fff;
+                  font-weight: bolder;
+                  position: absolute;
+                  top: -1.7rem;
+                  left: -3rem;
+                  transform: rotateZ(315deg);
+                }
+              }
             }
           }
         }
@@ -265,12 +325,13 @@ button.search-logo {
       height: 17.1rem;
       width: 100%;
       background-color: rgb(255, 255, 255);
-      margin-left: 15.3rem;
 
       &__List {
         &__All {
           width: 75%;
-          margin-left: 11.5rem;
+          margin: auto;
+          display: flex;
+          justify-content: center;
 
           &__list {
             display: inline-block;
@@ -278,7 +339,7 @@ button.search-logo {
             height: 3.2rem;
 
             padding: 1rem;
-            margin: 4rem 5rem 0 5rem;
+            margin: 4rem 2rem 0 2rem;
 
             background-color: #dddddd;
             border-radius: 2rem;
@@ -291,7 +352,7 @@ button.search-logo {
       height: 40rem;
       background-color: #000000;
       width: 100%;
-      margin-left: 15.3rem;
+
       margin-bottom: 5rem;
 
       &__Header {
@@ -335,31 +396,12 @@ p.show-detail {
 figcaption {
   height: 5rem;
   width: 20rem;
-  margin: 0.1rem 1rem 1rem 1rem;
+  margin-top: 0.1rem;
   position: absolute;
   background-color: grey;
   color: #dddddd;
   text-align: center;
   line-height: initial;
-}
-
-.body-item-image {
-  display: flex;
-  height: 23rem;
-  width: 20rem;
-  border-style: groove;
-  background-size: cover;
-  margin: 1rem;
-}
-
-.favorite-item-image {
-  display: block;
-  height: 15rem;
-  width: 18rem;
-  border-style: outset;
-  float: left;
-  background-size: cover;
-  margin: 1rem;
 }
 
 h2.category-title {
